all mappings done, streaming content now.

--- a/OrcaCare/SecondDesign.storyboard
+++ b/OrcaCare/SecondDesign.storyboard
@@ -250,7 +250,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tQS-Lh-Cub" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="553" y="964"/>
+            <point key="canvasLocation" x="559" y="974"/>
         </scene>
         <!--Timeline Shell View Controller-->
         <scene sceneID="rgE-H2-MgE">
@@ -323,7 +323,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RVI-ZN-yY5" id="PyI-8H-KGD">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="szk-Ob-yTS">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="szk-Ob-yTS">
                                                     <rect key="frame" x="19" y="33" width="80" height="80"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="80" id="bUS-3I-1u1"/>
